Projet_GL/src/test/deca/codegen/valid/unprovided/ok/methodesimbriqueesdeux.deca
class A {
	//int x = 1;

	int double(int a) {
		return a*2;
	}

	void quadruple(int a) {
                int e = double(a);
                int b = double(a);
		int d = e + b;
		print(d);
	}
}

{
	A a = new A();
	int c = 2;
	a.quadruple(c);
}
