Projet_GL/src/test/deca/codegen/invalid/missing_return.deca
// PAs de return dans une méthode non void

class Test{
    int pasDeReturn(){
        float a = 1.0;
    }
}

{
    Test t = new Test();
    int b = t.pasDeReturn();
}
